--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <h1>Welcome to My Homepage</h1>
+  <img src="images/hyunta.jpg" alt="">
   
 </body>
 </html>
